--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
       name="description"
       content="Pyschosomatic - Anxiety Assessment Game Analytics Dashboard"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/ps-logo.png" />
+    <link rel="apple-touch-icon" href="public/ps-logo.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
